installer les dépendances avec poetry dans docker

--- a/src/train_predict_2.ipynb
+++ b/src/train_predict_2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,24 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO: 'experiment-tf2' does not exist. Creating a new experiment\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mlflow.set_experiment('experiment-tf2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,22 +97,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020/03/02 12:39:17 WARNING mlflow.tracking.context.git_context: Failed to import Git (the Git executable is probably not on your PATH), so Git SHA is not available. Error: Failed to initialize: Bad git executable.\n",
+      "The git executable must be specified in one of the following ways:\n",
+      "    - be included in your $PATH\n",
+      "    - be set via $GIT_PYTHON_GIT_EXECUTABLE\n",
+      "    - explicitly set via git.refresh()\n",
+      "\n",
+      "All git commands will error until this is rectified.\n",
+      "\n",
+      "This initial warning can be silenced or aggravated in the future by setting the\n",
+      "$GIT_PYTHON_REFRESH environment variable. Use one of the following values:\n",
+      "    - quiet|q|silence|s|none|n|0: for no warning or exception\n",
+      "    - warn|w|warning|1: for a printed warning\n",
+      "    - error|e|raise|r|2: for a raised exception\n",
+      "\n",
+      "Example:\n",
+      "    export GIT_PYTHON_REFRESH=quiet\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Downloading data from http://download.tensorflow.org/data/iris_training.csv\n",
+      "8192/2194 [================================================================================================================] - 0s 0us/step\n",
+      "Downloading data from http://download.tensorflow.org/data/iris_test.csv\n",
+      "8192/573 [============================================================================================================================================================================================================================================================================================================================================================================================================================================] - 0s 0us/step\n",
       "INFO:tensorflow:Using default config.\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: /tmp/tmp_qesfeaw\n",
-      "INFO:tensorflow:Using config: {'_model_dir': '/tmp/tmp_qesfeaw', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': allow_soft_placement: true\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: /tmp/tmpx48trhc9\n",
+      "INFO:tensorflow:Using config: {'_model_dir': '/tmp/tmpx48trhc9', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': allow_soft_placement: true\n",
       "graph_options {\n",
       "  rewrite_options {\n",
       "    meta_optimizer_iterations: ONE\n",
       "  }\n",
       "}\n",
       ", '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_experimental_max_worker_delay_secs': None, '_session_creation_timeout_secs': 7200, '_service': None, '_cluster_spec': ClusterSpec({}), '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
+      "WARNING:tensorflow:From /opt/conda/lib/python3.7/site-packages/tensorflow_core/python/ops/resource_variable_ops.py:1635: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "If using Keras pass *_constraint arguments to layers.\n",
+      "WARNING:tensorflow:From /opt/conda/lib/python3.7/site-packages/tensorflow_core/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use Variable.read_value. Variables in 2.X are initialized automatically both in eager and graph (inside tf.defun) contexts.\n",
       "INFO:tensorflow:Calling model_fn.\n",
       "WARNING:tensorflow:Layer dnn is casting an input tensor from dtype float64 to the layer's dtype of float32, which is new behavior in TensorFlow 2.  The layer has dtype float32 because it's dtype defaults to floatx.\n",
       "\n",
@@ -128,6 +153,25 @@
       "\n",
       "To change all layers to have dtype float64 by default, call `tf.keras.backend.set_floatx('float64')`. To change just this layer, pass dtype='float64' to the layer constructor. If you are the author of this layer, you can disable autocasting by passing autocast=False to the base Layer constructor.\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/tensorflow_core/python/ops/variable_scope.py:453: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3,and in 3.9 it will stop working\n",
+      "  shape is not None and isinstance(shape, collections_lib.Sequence) and\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /opt/conda/lib/python3.7/site-packages/tensorflow_core/python/keras/optimizer_v2/adagrad.py:103: calling Constant.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
+      "INFO:tensorflow:Done calling model_fn.\n",
+      "INFO:tensorflow:Create CheckpointSaverHook.\n"
      ]
     },
     {
@@ -142,33 +186,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Done calling model_fn.\n",
-      "INFO:tensorflow:Create CheckpointSaverHook.\n",
       "INFO:tensorflow:Graph was finalized.\n",
       "INFO:tensorflow:Running local_init_op.\n",
       "INFO:tensorflow:Done running local_init_op.\n",
-      "INFO:tensorflow:Saving checkpoints for 0 into /tmp/tmp_qesfeaw/model.ckpt.\n",
-      "INFO:tensorflow:loss = 1.1514211, step = 0\n",
-      "INFO:tensorflow:global_step/sec: 533.859\n",
-      "INFO:tensorflow:loss = 0.92138463, step = 100 (0.202 sec)\n",
-      "INFO:tensorflow:global_step/sec: 727.516\n",
-      "INFO:tensorflow:loss = 0.8737793, step = 200 (0.132 sec)\n",
-      "INFO:tensorflow:global_step/sec: 760.024\n",
-      "INFO:tensorflow:loss = 0.82905334, step = 300 (0.131 sec)\n",
-      "INFO:tensorflow:global_step/sec: 758.221\n",
-      "INFO:tensorflow:loss = 0.77164114, step = 400 (0.132 sec)\n",
-      "INFO:tensorflow:global_step/sec: 728.453\n",
-      "INFO:tensorflow:loss = 0.7299293, step = 500 (0.137 sec)\n",
-      "INFO:tensorflow:global_step/sec: 737.38\n",
-      "INFO:tensorflow:loss = 0.73426265, step = 600 (0.136 sec)\n",
-      "INFO:tensorflow:global_step/sec: 746.606\n",
-      "INFO:tensorflow:loss = 0.755196, step = 700 (0.134 sec)\n",
-      "INFO:tensorflow:global_step/sec: 771.619\n",
-      "INFO:tensorflow:loss = 0.73634386, step = 800 (0.129 sec)\n",
-      "INFO:tensorflow:global_step/sec: 753.729\n",
-      "INFO:tensorflow:loss = 0.7077699, step = 900 (0.133 sec)\n",
-      "INFO:tensorflow:Saving checkpoints for 1000 into /tmp/tmp_qesfeaw/model.ckpt.\n",
-      "INFO:tensorflow:Loss for final step: 0.70122427.\n",
+      "INFO:tensorflow:Saving checkpoints for 0 into /tmp/tmpx48trhc9/model.ckpt.\n",
+      "INFO:tensorflow:loss = 1.40484, step = 0\n",
+      "INFO:tensorflow:global_step/sec: 435.948\n",
+      "INFO:tensorflow:loss = 0.9348641, step = 100 (0.219 sec)\n",
+      "INFO:tensorflow:global_step/sec: 723.32\n",
+      "INFO:tensorflow:loss = 0.88537025, step = 200 (0.139 sec)\n",
+      "INFO:tensorflow:global_step/sec: 746.42\n",
+      "INFO:tensorflow:loss = 0.7834304, step = 300 (0.134 sec)\n",
+      "INFO:tensorflow:global_step/sec: 751.948\n",
+      "INFO:tensorflow:loss = 0.8136801, step = 400 (0.133 sec)\n",
+      "INFO:tensorflow:global_step/sec: 665.671\n",
+      "INFO:tensorflow:loss = 0.68808913, step = 500 (0.159 sec)\n",
+      "INFO:tensorflow:global_step/sec: 628.886\n",
+      "INFO:tensorflow:loss = 0.70802796, step = 600 (0.151 sec)\n",
+      "INFO:tensorflow:global_step/sec: 749.863\n",
+      "INFO:tensorflow:loss = 0.704786, step = 700 (0.134 sec)\n",
+      "INFO:tensorflow:global_step/sec: 741.945\n",
+      "INFO:tensorflow:loss = 0.6784909, step = 800 (0.136 sec)\n",
+      "INFO:tensorflow:global_step/sec: 680.144\n",
+      "INFO:tensorflow:loss = 0.6223219, step = 900 (0.145 sec)\n",
+      "INFO:tensorflow:Saving checkpoints for 1000 into /tmp/tmpx48trhc9/model.ckpt.\n",
+      "INFO:tensorflow:Loss for final step: 0.59800684.\n",
       "INFO:tensorflow:Calling model_fn.\n",
       "WARNING:tensorflow:Layer dnn is casting an input tensor from dtype float64 to the layer's dtype of float32, which is new behavior in TensorFlow 2.  The layer has dtype float32 because it's dtype defaults to floatx.\n",
       "\n",
@@ -177,30 +219,44 @@
       "To change all layers to have dtype float64 by default, call `tf.keras.backend.set_floatx('float64')`. To change just this layer, pass dtype='float64' to the layer constructor. If you are the author of this layer, you can disable autocasting by passing autocast=False to the base Layer constructor.\n",
       "\n",
       "INFO:tensorflow:Done calling model_fn.\n",
-      "INFO:tensorflow:Starting evaluation at 2020-03-02T07:16:38Z\n",
+      "INFO:tensorflow:Starting evaluation at 2020-03-02T12:39:22Z\n",
       "INFO:tensorflow:Graph was finalized.\n",
-      "INFO:tensorflow:Restoring parameters from /tmp/tmp_qesfeaw/model.ckpt-1000\n",
-      "INFO:tensorflow:Running local_init_op.\n",
+      "INFO:tensorflow:Restoring parameters from /tmp/tmpx48trhc9/model.ckpt-1000\n",
+      "INFO:tensorflow:Running local_init_op.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/tensorflow_core/python/training/tracking/data_structures.py:720: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3,and in 3.9 it will stop working\n",
+      "  if not isinstance(wrapped_dict, collections.Mapping):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "INFO:tensorflow:Done running local_init_op.\n",
-      "INFO:tensorflow:Inference Time : 0.28565s\n",
-      "INFO:tensorflow:Finished evaluation at 2020-03-02-07:16:39\n",
-      "INFO:tensorflow:Saving dict for global step 1000: accuracy = 0.73333335, average_loss = 0.76595986, global_step = 1000, loss = 0.76595986\n",
-      "INFO:tensorflow:Saving 'checkpoint_path' summary for global step 1000: /tmp/tmp_qesfeaw/model.ckpt-1000\n",
+      "INFO:tensorflow:Inference Time : 0.27774s\n",
+      "INFO:tensorflow:Finished evaluation at 2020-03-02-12:39:22\n",
+      "INFO:tensorflow:Saving dict for global step 1000: accuracy = 0.53333336, average_loss = 0.73073494, global_step = 1000, loss = 0.73073494\n",
+      "INFO:tensorflow:Saving 'checkpoint_path' summary for global step 1000: /tmp/tmpx48trhc9/model.ckpt-1000\n",
       "\n",
-      "Test set accuracy: 0.733\n",
+      "Test set accuracy: 0.533\n",
       "\n",
       "INFO:tensorflow:Calling model_fn.\n",
       "INFO:tensorflow:Done calling model_fn.\n",
       "INFO:tensorflow:Graph was finalized.\n",
-      "INFO:tensorflow:Restoring parameters from /tmp/tmp_qesfeaw/model.ckpt-1000\n",
+      "INFO:tensorflow:Restoring parameters from /tmp/tmpx48trhc9/model.ckpt-1000\n",
       "INFO:tensorflow:Running local_init_op.\n",
       "INFO:tensorflow:Done running local_init_op.\n",
       "\n",
-      "Prediction is \"Setosa\" (82.4%), expected \"Setosa\"\n",
+      "Prediction is \"Setosa\" (68.5%), expected \"Setosa\"\n",
       "\n",
-      "Prediction is \"Versicolor\" (38.2%), expected \"Versicolor\"\n",
+      "Prediction is \"Virginica\" (43.1%), expected \"Versicolor\"\n",
       "\n",
-      "Prediction is \"Versicolor\" (37.7%), expected \"Virginica\"\n",
+      "Prediction is \"Virginica\" (57.7%), expected \"Virginica\"\n",
       "INFO:tensorflow:Calling model_fn.\n",
       "WARNING:tensorflow:Layer dnn is casting an input tensor from dtype float64 to the layer's dtype of float32, which is new behavior in TensorFlow 2.  The layer has dtype float32 because it's dtype defaults to floatx.\n",
       "\n",
@@ -209,6 +265,9 @@
       "To change all layers to have dtype float64 by default, call `tf.keras.backend.set_floatx('float64')`. To change just this layer, pass dtype='float64' to the layer constructor. If you are the author of this layer, you can disable autocasting by passing autocast=False to the base Layer constructor.\n",
       "\n",
       "INFO:tensorflow:Done calling model_fn.\n",
+      "WARNING:tensorflow:From /opt/conda/lib/python3.7/site-packages/tensorflow_core/python/saved_model/signature_def_utils_impl.py:201: build_tensor_info (from tensorflow.python.saved_model.utils_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "This function will only be available through the v1 compatibility library as tf.compat.v1.saved_model.utils.build_tensor_info or tf.compat.v1.saved_model.build_tensor_info.\n",
       "INFO:tensorflow:Signatures INCLUDED in export for Classify: None\n",
       "INFO:tensorflow:Signatures INCLUDED in export for Regress: None\n",
       "INFO:tensorflow:Signatures INCLUDED in export for Predict: ['predict']\n",
@@ -218,31 +277,31 @@
       "INFO:tensorflow:'serving_default' : Classification input must be a single string Tensor; got {'SepalLength': <tf.Tensor 'Placeholder:0' shape=(None,) dtype=float64>, 'SepalWidth': <tf.Tensor 'Placeholder_1:0' shape=(None,) dtype=float64>, 'PetalLength': <tf.Tensor 'Placeholder_2:0' shape=(None,) dtype=float64>, 'PetalWidth': <tf.Tensor 'Placeholder_3:0' shape=(None,) dtype=float64>}\n",
       "INFO:tensorflow:'classification' : Classification input must be a single string Tensor; got {'SepalLength': <tf.Tensor 'Placeholder:0' shape=(None,) dtype=float64>, 'SepalWidth': <tf.Tensor 'Placeholder_1:0' shape=(None,) dtype=float64>, 'PetalLength': <tf.Tensor 'Placeholder_2:0' shape=(None,) dtype=float64>, 'PetalWidth': <tf.Tensor 'Placeholder_3:0' shape=(None,) dtype=float64>}\n",
       "WARNING:tensorflow:Export includes no default signature!\n",
-      "INFO:tensorflow:Restoring parameters from /tmp/tmp_qesfeaw/model.ckpt-1000\n",
+      "INFO:tensorflow:Restoring parameters from /tmp/tmpx48trhc9/model.ckpt-1000\n",
       "INFO:tensorflow:Assets added to graph.\n",
       "INFO:tensorflow:No assets to write.\n",
-      "INFO:tensorflow:SavedModel written to: /tmp/tmp42h2bivt/temp-b'1583133399'/saved_model.pb\n"
+      "INFO:tensorflow:SavedModel written to: /tmp/tmp0qiqa6aq/temp-b'1583152762'/saved_model.pb\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020/03/02 07:16:39 INFO mlflow.tensorflow: Validating the specified TensorFlow model by attempting to load it in a new TensorFlow graph...\n",
-      "2020/03/02 07:16:39 INFO mlflow.tensorflow: Validation succeeded!\n"
+      "2020/03/02 12:39:23 INFO mlflow.tensorflow: Validating the specified TensorFlow model by attempting to load it in a new TensorFlow graph...\n",
+      "2020/03/02 12:39:23 INFO mlflow.tensorflow: Validation succeeded!\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/tmp42h2bivt/1583133399\n",
+      "/tmp/tmp0qiqa6aq/1583152762\n",
       "\n",
       "Original prediction is \"Setosa\", reloaded prediction is \"Setosa\"\n",
       "\n",
-      "Original prediction is \"Versicolor\", reloaded prediction is \"Versicolor\"\n",
+      "Original prediction is \"Virginica\", reloaded prediction is \"Virginica\"\n",
       "\n",
-      "Original prediction is \"Versicolor\", reloaded prediction is \"Versicolor\"\n"
+      "Original prediction is \"Virginica\", reloaded prediction is \"Virginica\"\n"
      ]
     }
    ],
@@ -343,13 +402,6 @@
     "    finally:\n",
     "        shutil.rmtree(temp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
